infrastructure/monitoring/routes/app/kubelet-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubelet-metrics
  namespace: monitoring
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ports:
    - name: http-metrics
      port: 10255
      protocol: TCP
      targetPort: 10255
  type: ClusterIP
