infrastructure/monitoring/routes/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics
  namespace: monitoring
spec:
  hostnames:
    - metrics.cura.nz
  parentRefs:
    - name: gateway
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
